--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,4 @@
 <app-rickandmortyinfo><app-rickandmortyinfo>
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <h1>elletasapiapp</h1>
-<div class="mainContainer border">
-    <div class="secondContainer border">
-        <div class="container-fluid">
-            <div class="row.align-baseline border">
-                <div class=" col-sm-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">name</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">id</h6>
-                            <p class="card-text">code</p>
-                            <a class="card-text">air date</a>
-                            <a class="card-text">characters</a>
-                            <a href="https://rickandmortyapi.com/api/location/1" class="card-link">url </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div *ngFor="let item of allRecords" class="col-md-3 col-sm-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">{{item.name}}</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">{{item.id}}</h6>
-                            <p class="card-text">{{item.code}}</p>
-                            <p class="card-text">{{item.air date}}</p>
-                            <a class="card-text">{{item.characters}}</a>
-                            <a href="https://rickandmortyapi.com/api/location/1" class="card-link"> {{item.url}}</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Earth (C-137)</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">1</h6>
-                            <p class="card-text">Dimension C-137</p>
-                            <a class="card-link">2017-11-10</a>
-                            <a href="https://rickandmortyapi.com/api/location/1" class="card-link"> LINK </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<h1>Hello World
+    
+</h1>
