--- a/src/app/rickandmortyinfo/rickandmortyinfo.component.html
+++ b/src/app/rickandmortyinfo/rickandmortyinfo.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="mainContainer border">
     <div class="secondContainer border">
         <div class="container-fluid">
@@ -15,7 +17,7 @@
                     </div>
                 </div>
 
-                <div *ngFor ="let item of allRecords"class="col-md-3 col-sm-3">
+                <div *ngFor ="let item of allrecordsServices"class="col-md-3 col-sm-3">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">{{item.name}}</h5>
